@@ -14,6 +14,7 @@ import org.springframework.security.config.annotation.authentication.configurati
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
@@ -30,15 +31,15 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import site.kkokkio.global.auth.CustomUserDetailsService;
 import site.kkokkio.global.dto.RsData;
 import site.kkokkio.global.filter.JwtAuthenticationFilter;
-import site.kkokkio.global.security.CustomUserDetailsService;
 import site.kkokkio.global.util.JwtUtils;
 
 @Configuration
 @EnableWebSecurity
 @RequiredArgsConstructor
-@EnableMethodSecurity(prePostEnabled = true)
+@EnableMethodSecurity
 public class SecurityConfig {
 
 	private final CustomUserDetailsService customUserDetailsService;
@@ -55,7 +56,7 @@ public class SecurityConfig {
 				httpSecurityCorsConfigurer -> httpSecurityCorsConfigurer.configurationSource(corsConfigurationSource()))
 
 			// CSRF 보호 비활성화 (REST API + JWT 조합)
-			.csrf(csrf -> csrf.disable())
+			.csrf(AbstractHttpConfigurer::disable)
 
 			// HTTP 응답 헤더 설정
 			.headers(headers -> headers
@@ -84,11 +85,13 @@ public class SecurityConfig {
 			.authorizeHttpRequests(authorize ->
 				authorize
 					// — USER 로그인 필요
-					.requestMatchers(HttpMethod.POST, "/api/v1/posts/*/comments").authenticated()		// 댓글 작성
-					.requestMatchers(HttpMethod.PATCH, "/api/v1/comments/*").authenticated()			// 댓글 수정
-					.requestMatchers(HttpMethod.DELETE, "/api/v1/comments/*").authenticated()			// 댓글 삭제
-					.requestMatchers(HttpMethod.POST, "/api/v1/comments/*/like").authenticated()		// 댓글 좋아요
-					.requestMatchers(HttpMethod.DELETE, "/api/v1/comments/*/like").authenticated()	// 댓글 좋아요 취소
+					.requestMatchers(HttpMethod.POST, "/api/v1/posts/*/comments").authenticated()        // 댓글 작성
+					.requestMatchers(HttpMethod.POST, "/api/v1/auth/check-password").authenticated()    // 비밀번호 검증
+					.requestMatchers(HttpMethod.PATCH, "/api/v1/member/me").authenticated()            // 회원 정보 수정
+
+					.requestMatchers("/api/*/comments/**").authenticated()
+					.requestMatchers("/api/*/reports/**").authenticated()
+					.requestMatchers("/api/*/admin/**").authenticated()
 
 					// 그 외 모든 요청 허용
 					.anyRequest().permitAll()
@@ -102,15 +105,16 @@ public class SecurityConfig {
 	public CorsConfigurationSource corsConfigurationSource() {
 		CorsConfiguration configuration = new CorsConfiguration();
 		// 모든 출처 허용 (운영 환경 배포 시 수정 필요)
-		configuration.setAllowedOriginPatterns(Arrays.asList(
-			"https://login.aleph.kr", // Todo: 임시 프론트 배포 URL1
-			"https://www.app4.qwas.shop", // Todo: 임시 프론트 배포 URL2
+		configuration.setAllowedOrigins(List.of(
+			// "https://login.aleph.kr", // 임시 프론트 배포 URL1
+			// "https://www.app4.qwas.shop", // 임시 프론트 배포 URL2
 			"https://web.api.deploy.kkokkio.site:3000", // 프론트 API URL
-			"http://localhost:3000", // 로컬용
+			"https://web.kkokkio.site", // 프론트 배포 URL
 			"https://api.deploy.kkokkio.site", // 백엔드 dev API URL
 			"https://api.prd.kkokkio.site"// 백엔드 prod API URL
 		)); // 프론트 사이트 추가
-		configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS")); // 허용 HTTP 메소드
+		configuration.setAllowedMethods(
+			Arrays.asList("GET", "POST", "PATCH", "PUT", "DELETE", "OPTIONS")); // 허용 HTTP 메소드
 		// configuration.setAllowedHeaders(Arrays.asList("*")); // HTTP 헤더(모두 허용)
 		configuration.setAllowCredentials(true); // 쿠키 등 자격 증명
 		// 클라이언트 노출 헤더
@@ -146,7 +150,7 @@ public class SecurityConfig {
 	// JwtAuthenticationFilter Bean 등록
 	@Bean
 	public JwtAuthenticationFilter jwtAuthenticationFilter() {
-		return new JwtAuthenticationFilter(jwtUtils, customUserDetailsService, redisTemplate);
+		return new JwtAuthenticationFilter(jwtUtils, redisTemplate);
 	}
 
 	// 인증 안 된 상태로 보호된 엔드포인트에 접근했을 때 (401)
@@ -180,4 +184,5 @@ public class SecurityConfig {
 	public PasswordEncoder passwordEncoder() {
 		return new BCryptPasswordEncoder();
 	}
+
 }
